--- a/gitbegin.css
+++ b/gitbegin.css
@@ -1,4 +1,6 @@
 p{
+    height: 100vh;
     display: flex;
-    justify-content: center;  
+    justify-content: center;
+    align-items: center ;  
 }
